fix header background-position mobile

--- a/css/style.css
+++ b/css/style.css
@@ -1070,8 +1070,17 @@ input {
   .header__btn {
     display: none;
   }
+  .info__spacs-title{
+    width: 155px;
+  }
+  .header{
+    background-position: 35% center;
+  }
   .popup__btn {
     right: 160px;
+  }
+  .info__top{
+    margin-bottom: 20vh;
   }
   .info__specs-caption, .info__specs-text {
     font-size: 14px;
@@ -1110,18 +1119,24 @@ input {
   .info__top {
     gap: 10px;
   }
+
+
 }
-@media screen and (max-width: 321px) {
-  .header {
-    background-position: unset;
+@media screen and (max-width: 341px) {
+
+
+  .logo path{
+    color: #fff;
+  }
+  .header__content-box{
+    margin-top: 150px;
   }
   .header__top {
     padding-top: 10px;
   }
   .header__title {
     font-size: 50px;
-    color: #000000;
-    padding: 0px 0px 60px 0px;
+    color: #ffffff;
   }
   #header__text {
     margin: 0px 0px 25px 0px;
